--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "grunt-contrib-jshint": "^0.4.3",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-watch": "^0.4.4",
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-uglify": "^0.2.7",
     "grunt-ngmin": "0.0.2",
     "grunt-html2js": "^0.1.9",
