cleanup things I don't want

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "author": "Josh David Miller",
-  "name": "ngbp",
-  "version": "0.3.2",
-  "homepage": "https://github.com/ngbp/ngbp",
+  "author": "Allyson Schrader",
+  "name": "silkworm",
+  "version": "0.0.1",
+  "homepage": "https://github.com/amschrader/silkworm",
   "licenses": {
     "type": "MIT",
-    "url": "https://raw.github.com/ngbp/ngbp/master/LICENSE"
+    "url": "https://raw.github.com/amschrader/silkworm/master/LICENSE"
   },
-  "bugs": "https://github.com/ngbp/ngbp/issues",
+  "bugs": "https://github.com/amschrader/silkworm/issues",
   "repository": {
     "type": "git",
-    "url": "git@github.com:ngbp/ngbp.git"
+    "url": "git@github.com:amschrader/silkworm.git"
   },
   "dependencies": {},
   "devDependencies": {
