--- a/package.json
+++ b/package.json
@@ -13,34 +13,43 @@
     "url": "git@github.com:amschrader/silkworm.git"
   },
   "dependencies": {
-    "underscore.string": "2.3.3",
-    "lodash": "2.4.1"
+    "express": "3.4.8",
+    "express3-handlebars": "0.5.0",
+    "lodash": "2.4.1",
+    "request": "2.31.0",
+    "underscore.string": "2.3.3"
+  },
+  "engines": {
+    "node": ">= 0.8.0"
   },
   "devDependencies": {
     "aws-sdk": "2.0.0-rc10",
     "grunt": "~0.4.1",
     "grunt-aws-s3": "0.8.5",
+    "grunt-bump": "0.0.6",
     "grunt-cloudfront": "0.1.1",
-    "grunt-contrib-less": "~0.11.0",
+    "grunt-coffeelint": "~0.0.10",
     "grunt-contrib-clean": "^0.4.1",
+    "grunt-contrib-coffee": "^0.7.0",
+    "grunt-contrib-compass": "~0.7.0",
+    "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-copy": "^0.4.1",
     "grunt-contrib-jshint": "^0.4.3",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-watch": "^0.4.4",
+    "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-uglify": "^0.2.7",
-    "grunt-ngmin": "0.0.2",
-    "grunt-html2js": "^0.1.9",
-    "grunt-contrib-coffee": "^0.7.0",
-    "grunt-coffeelint": "~0.0.10",
+    "grunt-contrib-watch": "^0.4.4",
     "grunt-conventional-changelog": "^0.1.2",
-    "grunt-bump": "0.0.6",
+    "grunt-html2js": "^0.1.9",
+    "grunt-karma": "^0.8.2",
+    "grunt-ngmin": "0.0.2",
+    "grunt-shell": "0.6.4",
+    "ip": "0.3.0",
+    "karma": "^0.12.9",
+    "karma-coffee-preprocessor": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
-    "grunt-karma": "^0.8.2",
-    "karma-coffee-preprocessor": "^0.2.1",
-    "karma": "^0.12.9",
+    "optimist": "0.6.1",
     "underscore": "1.6.0"
   }
 }
